Fix jumping width of RoleAssignment (#4639)

--- a/src/Sulu/Bundle/SecurityBundle/Resources/js/containers/RoleAssignments/roleAssignment.scss
+++ b/src/Sulu/Bundle/SecurityBundle/Resources/js/containers/RoleAssignments/roleAssignment.scss
@@ -20,3 +20,7 @@ $roleAssignmentBorderColor: $silver;
         opacity: .5;
     }
 }
+
+.locale {
+    width: 50%;
+}
